--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
         <script src="scripts/surveymate.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/surveys.js"></script>
+        <script src="scripts/services/surveyService.js"></script>
         <!-- endbuild -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
