can edit survey header and first question

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,10 @@
         <title></title>
         <meta name="description" content=""/>
         <meta name="viewport" content="width=device-width"/>
+        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="styles/angular-ui.css">
         <link rel="stylesheet" href="styles/main.css"/>
+        <link rel="stylesheet" href="styles/survey.css"/>
 
     </head>
     <body ng-app="surveymateApp">
@@ -22,6 +25,7 @@
         <div class="container" ng-view></div>
 
         <script src="scripts/vendor/angular.js"></script>
+        <script src="scripts/vendor/angular-ui.js"></script>
 
         <!-- build:js scripts/scripts.js -->
         <script src="scripts/surveymate.js"></script>
