can click to edit

--- a/app/index.html
+++ b/app/index.html
@@ -30,8 +30,9 @@
         <!-- build:js scripts/scripts.js -->
         <script src="scripts/surveymate.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/surveys.js"></script>
-        <script src="scripts/services/surveyService.js"></script>
+        <script src="scripts/controllers.js"></script>
+        <script src="scripts/services.js"></script>
+        <script src="scripts/directives.js"></script>
         <!-- endbuild -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
