add 'add choice'

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,8 @@
 
         <script src="scripts/vendor/angular.js"></script>
         <script src="scripts/vendor/angular-ui.js"></script>
+        <script src="scripts/vendor/underscore.js"></script>
+        <script src="scripts/vendor/jquery-1.8.3.js"></script>
 
         <!-- build:js scripts/scripts.js -->
         <script src="scripts/surveymate.js"></script>
