--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 
         <script src="scripts/vendor/angular.js"></script>
         <script src="scripts/vendor/angular-ui.js"></script>
-        <script src="scripts/vendor/underscore.js"></script>
+        <script src="scripts/vendor/lodash.js"></script>
         <script src="scripts/vendor/jquery-1.8.3.js"></script>
 
         <!-- build:js scripts/scripts.js -->
